fix dropdown overlap issue and add hovering effect to dropdown items

--- a/src/components/MonitoringPage/MonitoringPage.module.css
+++ b/src/components/MonitoringPage/MonitoringPage.module.css
@@ -109,6 +109,11 @@
     height: 3rem;
 }
 
+.SmallerIcon {
+    width: 2rem;
+    height: 2rem;
+}
+
 .DownArrow {
     padding-top: 0.5rem;
 }
@@ -159,4 +164,49 @@
     z-index: 3;
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
         0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.DropDownContainer {
+    background-color: #f9f9f9;
+    position: absolute;
+}
+
+.DropDownContent {
+    color: #000;
+    background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    box-shadow: 0 4px 4px 0 rgba(117, 117, 117, 0.2);
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
+
+.DropDownValue {
+    display: flex;
+    justify-content: space-between;
+    gap: 3rem;
+}
+
+.DropDownValueTitle {
+    font-weight: bold;
+}
+
+.DropDownDetails {
+    cursor: pointer;
+    padding: 1rem 1.5rem;
+}
+
+.DropDownDetails:hover {
+    background-color: #f1f1f1;
 }
